Copy contrib dependencies under clojure.core.typed.deps.
Manually rewrite tools.analyzer calls in c.c.t.ast-utils.