@@ -72,11 +72,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <!--<configuration>
-          <vmargs>-XX:MaxPermSize=128M</vmargs>
-          <vmargs>-XX:+TraceClassLoading</vmargs>
-          <vmargs>-XX:+TraceClassUnloading</vmargs>
-        </configuration>-->
+        <version>1.3.13</version>
         <executions>
           <execution>
             <id>clojure-compile</id>
